--- a/designbridge.html
+++ b/designbridge.html
@@ -11,7 +11,10 @@
     <h2 class="name">CREATIVELY FED</h2>
     <div class="description">
       <p>
-        Creatively Fed is a collective blending the wonders of cutting-edge technology, like machine learning, with art.
+        Creatively Fed is a collective blending the wonders of art with cutting-edge technology.
+      </p>
+      <p>
+        We specialise in AI, IoT, and interactive storytelling.
       </p>
       <p>
         We believe in collaboration. Together with artists and cultural institutions, we create impactful stories with creative tech.
