--- a/designbridge.html
+++ b/designbridge.html
@@ -8,7 +8,7 @@
       <title>Creatively Fed</title>
   </head>
   <body>
-    <h2 class="name">CREATIVELY FED</h2>
+    <div class="name">CREATIVELY FED</div>
     <div class="description">
       <p>
         Creatively Fed is a collective blending the wonders of art with cutting-edge technology.
