Add confetti an revise animation

--- a/designbridge.html
+++ b/designbridge.html
@@ -3,23 +3,36 @@
   <head>
      <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="stylesheets/strangers.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/confetti.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto:300,700&display=swap" rel="stylesheet">
-      <script type="text/javascript" src="stylesheets/index.js" ></script>
+      <script type="text/javascript" src="stylesheets/index.js"></script>
       <title>Creatively Fed</title>
   </head>
   <body>
     <div class="name">CREATIVELY FED</div>
-    <div class="description">
-      <p>
-        Creatively Fed is a collective blending the wonders of art with cutting-edge technology.
-      </p>
-      <p>
-        We specialise in AI, IoT, and interactive storytelling.
-      </p>
-      <p>
-        We believe in collaboration. Together with artists and cultural institutions, we create impactful stories with creative tech.
-      </p>
-    </div>
+    <div class="confetti-piece"></div>
+    <div class="confetti-piece"></div>
+
+      <div class="description">
+        <div class="confetti-piece"></div>
+        <p>
+          Creatively Fed is a collective blending the wonders of art with cutting-edge technology.
+        </p>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+
+        <p>
+          We specialise in AI, IoT, and interactive storytelling.
+        </p>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <p>
+          Together with artists and cultural institutions, we create impactful stories with creative tech.
+        </p>
+      </div>
+      <div class="confetti-piece"></div>
+      <div class="confetti-piece"></div>
   </body>
 
 </html>
