Adding first work

--- a/designbridge.html
+++ b/designbridge.html
@@ -2,9 +2,11 @@
 <html>
   <head>
      <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="stylesheets/strangers.css">
-      <link rel="stylesheet" type="text/css" href="stylesheets/confetti.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/index.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/title.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/confetti.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto:300,700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
       <script type="text/javascript" src="stylesheets/index.js"></script>
       <title>Creatively Fed</title>
   </head>
@@ -33,6 +35,15 @@
       </div>
       <div class="confetti-piece"></div>
       <div class="confetti-piece"></div>
+      <div class="featured-work-link">
+        <p>Featured work</p>
+        <p><i class="fas fa-angle-down"></i><p>
+      </div>
+      <div class="first-work">
+        <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4"><img class="first-work" alt="lumiere-picture" src="https://cdn-images-1.medium.com/max/1600/1*ghopIPQSbTRJb3ixRtW8Vg.png"></img></a>
+        <p class="writeup">Lumiere London 2018 - commissioned by Mayor of London </p>
+        <p class="writeup">Analysis of culture through 11,000 tweets using NLP and computer vision of the festival's Flickr images.</p>
+      </div>
   </body>
 
 </html>
