Add portfolio of projects

--- a/designbridge.html
+++ b/designbridge.html
@@ -39,10 +39,42 @@
         <p>Featured work</p>
         <p><i class="fas fa-angle-down"></i><p>
       </div>
-      <div class="first-work">
-        <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4"><img class="first-work" alt="lumiere-picture" src="https://cdn-images-1.medium.com/max/1600/1*ghopIPQSbTRJb3ixRtW8Vg.png"></img></a>
-        <p class="writeup">Lumiere London 2018 - commissioned by Mayor of London </p>
-        <p class="writeup">Analysis of culture through 11,000 tweets using NLP and computer vision of the festival's Flickr images.</p>
+      <div class="featured-works">
+        <div class="first-work">
+          <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4">
+            <img class="first-work" alt="lumiere-picture" src="https://cdn-images-1.medium.com/max/1600/1*ghopIPQSbTRJb3ixRtW8Vg.png"></img>
+          </a>
+          <div class="writeup">
+            <p class="project-category">Cultural Data Science.</p>
+            <p>Lumiere London 2018 - commissioned by Mayor of London </p>
+            <p>Analysis of culture through 11,000 tweets using NLP and computer vision of the festival's Flickr images.</p>
+          </div>
+        </div>
+
+        <div class="second-work">
+          <a href="https://sarahikeda.github.io/projects.html">
+              <img class="project-img" src="images/thoughtworks.jpg" alt="bci-opera">
+          </a>
+          <div class="writeup">
+            <p class="project-category">Creative Coding.</p>
+            <p>Artificial Brain Opera - Thoughtworks</p>
+            <p>Creative code/art performance using a Muse brain computer interface and sentiment analysis to expose our vulnerable inner selves.</p>
+          </div>
+        </div>
+
+        <div class="first-work">
+          <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4">
+            <img class="first-work" alt="lumiere-picture" src="images/mini.jpg"></img>
+          </a>
+          <div class="writeup">
+            <p class="project-category">Creative Hardware.<p>
+            <p>Bela - sponsored by the Royal Academy of Engineering. </p>
+            <p>Small computer for artists, in the style of Raspberry Pi for low-latency interactive audio projects.</p>
+          </div>
+        </div>
+
+
+
       </div>
   </body>
 
