--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="individual-project">
-        <a href="https://sarahikeda.github.io/notanothersadlight/">
+        <a href="#">
           <img class="project-img" src="images/bci.jpg" alt="bci-opera">
         </a>
         <br>
