--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
       <div>
           <img class="person-bio" src="./images/Liam.jpg" alt="liam">
           <p class="individual-writeup">
-          Liam Donovan completed his undergraduate & masters in Engineering Science at Oxford University followed by a PhD in Media and Arts Technology at Queen Mary University of London. He was a founding member of <a href="https://bela.io">Bela</a>, a small computer in the style of Raspberry Pi, for low-latency interactive audio projects, which was sponspored by the Royal Academy of Engineering.
+          Liam Donovan completed his undergraduate & masters in Engineering Science at Oxford University followed by a PhD in Media and Arts Technology at Queen Mary University of London. He was a founding member of <a href="https://bela.io">Bela</a>, a small computer in the style of Raspberry Pi, for low-latency interactive audio projects, which was sponsored by the Royal Academy of Engineering.
 				</p>
       </div>
       <div>
