--- a/designbridge.html
+++ b/designbridge.html
@@ -35,7 +35,7 @@
       </div>
       <div class="confetti-piece"></div>
       <div class="confetti-piece"></div>
-      <div class="featured-work-link">
+      <div class="section">
         <p>Featured work</p>
         <p><i class="fas fa-angle-down"></i><p>
       </div>
@@ -47,7 +47,7 @@
           <div class="writeup">
             <p class="project-category">Cultural Data Science.</p>
             <p>Lumiere London 2018 - commissioned by Mayor of London </p>
-            <p>Analysis of culture through 11,000 tweets using NLP and computer vision of the festival's Flickr images.</p>
+            <p>Computer vision and sentiment analysis of a festival's artefacts.</p>
           </div>
         </div>
 
@@ -58,24 +58,62 @@
           <div class="writeup">
             <p class="project-category">Creative Coding.</p>
             <p>Artificial Brain Opera - Thoughtworks</p>
-            <p>Creative code/art performance using a Muse brain computer interface and sentiment analysis to expose our vulnerable inner selves.</p>
+            <p>Measuring brain waves to expose our vulnerable, inner selves.</p>
           </div>
         </div>
 
         <div class="first-work">
-          <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4">
+          <a href="bela.io">
             <img class="first-work" alt="lumiere-picture" src="images/mini.jpg"></img>
           </a>
           <div class="writeup">
             <p class="project-category">Creative Hardware.<p>
-            <p>Bela - sponsored by the Royal Academy of Engineering. </p>
-            <p>Small computer for artists, in the style of Raspberry Pi for low-latency interactive audio projects.</p>
+            <p>Bela - sponsored by the Royal Academy of Engineering </p>
+            <p>Small computer for artists for low-latency interactive audio projects.</p>
+          </div>
+        </div>
+      </div>
+
+        <div class="section">
+          <p>Say hello!</p>
+          <p><i class="fas fa-angle-down"></i><p>
+        </div>
+        <div class="team">
+          <div>
+              <img class="person-bio" src="./images/james.jpg" alt="james">
+              <div class="individual-writeup">
+                <p>James Liu</p>
+                <p>Machine Learning Engineer, VFX Specialist</p>
+              </div>
+          </div>
+          <div>
+              <img class="person-bio" src="./images/Liam.jpg" alt="liam">
+              <div class="individual-writeup">
+                <p>Liam Donovan</p>
+                <p>Hardware Engineer, Musical Instrument Augmentation</p>
+              </div>
+          </div>
+          <div>
+              <img class="person-bio" src="./images/vishal.jpg" alt="vishal">
+              <div class="individual-writeup">
+                <p>Vishal Kumar</p>
+                <p>Cultural Data Scientist</p>
+              </div>
+          </div>
+          <div>
+            <img class="person-bio" src="./images/Sarah.jpg" alt="sarah">
+            <div class="individual-writeup">
+              <p>Sarah Ing</p>
+              <p>Creative Technologist, Fullstack Developer</p>
+          </div>
+          <div>
+            <img class="person-bio" src="./images/davy.jpg" alt="davy">
+            <div class="individual-writeup">
+              <p>Davy Smith</p>
+              <p>Creative Technologist, AI Researcher</p>
           </div>
         </div>
 
-
-
-      </div>
   </body>
 
 </html>
