--- a/designbridge.html
+++ b/designbridge.html
@@ -12,34 +12,22 @@
   </head>
   <body>
     <div class="name">CREATIVELY FED</div>
-    <div class="confetti-piece"></div>
-    <div class="confetti-piece"></div>
-
       <div class="description">
-        <div class="confetti-piece"></div>
         <p>
           Creatively Fed is a collective blending the wonders of art with cutting-edge technology.
         </p>
-        <div class="confetti-piece"></div>
-        <div class="confetti-piece"></div>
-        <div class="confetti-piece"></div>
-
         <p>
           We specialise in AI, IoT, and interactive storytelling.
         </p>
-        <div class="confetti-piece"></div>
-        <div class="confetti-piece"></div>
         <p>
           Together with artists and cultural institutions, we create impactful stories with creative tech.
         </p>
       </div>
-      <div class="confetti-piece"></div>
-      <div class="confetti-piece"></div>
       <div class="section">
         <p>Featured work</p>
-        <p><i class="fas fa-angle-down"></i><p>
+        <a href="#featured-works"><i class="fas fa-angle-down"></i></a>
       </div>
-      <div class="featured-works">
+      <div id="featured-works" class="featured-works">
         <div class="first-work">
           <a href="https://towardsdatascience.com/analyzing-the-lumiere-london-2018-light-festival-part-1-eb0284d317c7?sk=6636c299230848b95d4c4fc43c7d5ba4">
             <img class="first-work" alt="lumiere-picture" src="https://cdn-images-1.medium.com/max/1600/1*ghopIPQSbTRJb3ixRtW8Vg.png"></img>
@@ -61,7 +49,6 @@
             <p>Measuring brain waves to expose our vulnerable, inner selves.</p>
           </div>
         </div>
-
         <div class="first-work">
           <a href="bela.io">
             <img class="first-work" alt="lumiere-picture" src="images/mini.jpg"></img>
@@ -76,9 +63,31 @@
 
         <div class="section">
           <p>Say hello!</p>
-          <p><i class="fas fa-angle-down"></i><p>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <a href="#team"><i class="fas fa-angle-down"></i></a>
         </div>
-        <div class="team">
+        <div id="team" class="team">
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
           <div>
               <img class="person-bio" src="./images/james.jpg" alt="james">
               <div class="individual-writeup">
@@ -93,6 +102,18 @@
                 <p>Hardware Engineer, Musical Instrument Augmentation</p>
               </div>
           </div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
+          <div class="confetti-piece"></div>
           <div>
               <img class="person-bio" src="./images/vishal.jpg" alt="vishal">
               <div class="individual-writeup">
@@ -106,14 +127,26 @@
               <p>Sarah Ing</p>
               <p>Creative Technologist, Fullstack Developer</p>
           </div>
-          <div>
-            <img class="person-bio" src="./images/davy.jpg" alt="davy">
-            <div class="individual-writeup">
-              <p>Davy Smith</p>
-              <p>Creative Technologist, AI Researcher</p>
+        </div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div class="confetti-piece"></div>
+        <div>
+          <img class="person-bio" src="./images/davy.jpg" alt="davy">
+          <div class="individual-writeup">
+            <p>Davy Smith</p>
+            <p>Creative Technologist, AI Researcher</p>
           </div>
         </div>
-
+      </div>
+      <p class="email"><a href="mailto:YourNewFriend@CreativelyFed.com">Let's grab coffee.</a></p>
   </body>
 
 </html>
