--- a/designbridge.html
+++ b/designbridge.html
@@ -2,6 +2,7 @@
 <html>
   <head>
      <meta charset="utf-8">
+     <meta content="width=device-width, initial-scale=1" name="viewport" />
       <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/index.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/title.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/creatively-fed/confetti.css">
