--- a/about-us.html
+++ b/about-us.html
@@ -11,15 +11,15 @@
   <body>
     <div class="design-projects">
       <div>
-          <img class="person-bio" src="./images/Liam.jpg" alt="liam">
+          <img class="person-bio" src="./images/Alexey.jpg" alt="Alexey">
           <p class="individual-writeup">
-          Liam Donovan completed his undergraduate & masters in Engineering Science at Oxford University followed by a PhD in Media and Arts Technology at Queen Mary University of London. He was a founding member of <a href="https://bela.io">Bela</a>, a small computer in the style of Raspberry Pi, for low-latency interactive audio projects, which was sponsored by the Royal Academy of Engineering.
+            <a href="https://www.linkedin.com/in/alexey-youssef-1599b2140/">Alexey</a> is a certified physician and a Syrian Rhodes Scholar. He specialized in International and Global Health at the University of Oxford, with a specific focus on innovative and technology-enabled healthcare delivery models. Alexey has founded for-profit and non-profit organizations in both Syria and Ukraine.
 				</p>
       </div>
       <div>
 				<img class="person-bio" src="./images/Sarah.jpg" alt="sarah">
           <p class="individual-writeup">
-						<a href="https://www.linkedin.com/in/sarahing">Sarah Ing</a> is a software engineer specializing in developing user-centric products that make technology more accessible. She previously worked at <a href="https://www.skillshare.com">Skillshare</a>, a platform for teaching people new skills. Her work as a creative technologist has also been featured at the Manchester International Festival, MIT's Hacking Arts, and ThoughtWorks Art Residency.
+						<a href="https://www.linkedin.com/in/sarahing">Sarah Ing</a>  is a full-stack software engineer with years of experience in the insurance industry. She previously worked at a global education company, building the technology for their community platform, as well as working at a leading agency to develop customer-focused products in the government sector.
 				</p>
       </div>
     </div>
