--- a/landing/index.html
+++ b/landing/index.html
@@ -30,10 +30,22 @@
   <header class="masthead text-center">
     <div class="overlay"></div>
     <div class="container">
-      <img class="" src="img/logo2.png" alt="">
+      <img class="logo" src="img/logo2.png" alt="">
+      <div class="col-xl-9 mx-auto link">
+        <p class="mb-4">Let us help you by filling out our <a href="#">early adoptees survey.</a></p>
+      </div>
     </div>
   </header>
-
+  <!-- <section class="call-to-action text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto link">
+          <p class="mb-4">We would love to hear your thoughts.</p> <a href="#"><p class="mb-4">Please fill out our early adoptees survey.</p></a>
+        </div>
+      </div>
+    </div>
+  </section> -->
   <!-- Icons Grid -->
   <section class="features-icons">
     <div class="container">
@@ -94,12 +106,12 @@
   </section> -->
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <section class="testimonials">
     <div class="container">
-      <h2 class="mb-5">ABOUT</h2>
+      <h2 class="mb-5 title">ABOUT</h2>
       <div class="row">
         <div class="about col-lg-12">
-          <p>We are multicultural global citizens with a passion to make the world’s resources available to everyone. Sarah worked in health insurance on 2 continents and Alex treated patients in 6 countries. </p>
+          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian certified physician from Oxford University, who has practiced medicine in 6 countries. Sarah is a Japanese American software engineer who has worked in the insurance health industry across two continents.</p>
         </div>
       </div>
       <div class="row">
@@ -122,31 +134,10 @@
   </section>
 
   <!-- Call to Action -->
-  <section class="call-to-action text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h4 class="mb-4">Sign up for exclusive access to our beta program.</h4>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <!-- Footer -->
-  <footer class="footer bg-light">
+  <!-- <footer class="footer bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -161,7 +152,7 @@
           </ul>
         </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
