--- a/landing/index.html
+++ b/landing/index.html
@@ -15,7 +15,6 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Muli:200,400&display=swap" rel="stylesheet">
@@ -28,90 +27,50 @@
 <body>
   <!-- Masthead -->
   <header class="masthead text-center">
-    <div class="overlay"></div>
     <div class="container">
       <img class="logo" src="img/logo2.png" alt="">
-      <div class="col-xl-9 mx-auto link">
-        <p class="mb-4">Let us help you by filling out our <a href="#">early adoptees survey.</a></p>
+      <div class="col-xl-12 mx-auto link">
+        <p class="mb-4">Let us help you by filling out our <a href="#">early adopters survey.</a></p>
       </div>
     </div>
   </header>
-  <!-- <section class="call-to-action text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto link">
-          <p class="mb-4">We would love to hear your thoughts.</p> <a href="#"><p class="mb-4">Please fill out our early adoptees survey.</p></a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- Icons Grid -->
+
   <section class="features-icons">
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <p class="mb-5">Keea is a London-based startup creating an innovative healthcare delivery model. We imagine a world in which medical travel is integrated within the healthcare systems and is available as a trusted and safe option for patients. We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
+        <div class="col-xl-12 mx-auto">
+          <p class="company-description mb-5">Keea is a London-based startup creating an innovative healthcare delivery model. We imagine a world in which medical travel is integrated within the healthcare systems and is available as a trusted and safe option for patients. We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="listed-features row">
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <h3>COMMUNITY</h3>
-            <p class="lead mb-0">Belong to a community of other global citizens who share their experiences and knowledge of medical travel.</p>
+            <p class="lead mb-0">Patients belong to a community of other global citizens who share their experience and knowledge of medical travel.</p>
           </div>
         </div>
         <div class="col-lg-4 integration">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <h3>INTEGRATION</h3>
-            <p class="lead mb-0">We work with your primary care doctor to make sure we’re giving you safe, personalized treatment.</p>
+            <p class="lead mb-0">We work with GPs or consultants to make sure your patients have a safe, integrated medical travel experience.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <h3>TRUST</h3>
-            <p class="lead mb-0">Quality of your healthcare treatment and transparency in our service is the most important thing to you and us.</p>
+            <p class="lead mb-0">Quality of your patient's healthcare treatment and transparency in our service is the most important thing to you and us.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Image Showcases -->
-  <!-- <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- Testimonials -->
   <section class="testimonials">
     <div class="container">
       <h2 class="mb-5 title">ABOUT</h2>
       <div class="row">
         <div class="about col-lg-12">
-          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian certified physician from Oxford University, who has practiced medicine in 6 countries. Sarah is a Japanese American software engineer who has worked in the insurance health industry across two continents.</p>
+          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Japanese American software engineer who has worked in the insurance health industry across two continents.</p>
         </div>
       </div>
       <div class="row">
@@ -119,12 +78,12 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Alexey1.jpg" alt="">
             <h5>Alex Youssef, CEO</h5>
-            <p class="font-weight-light mb-0">Certified Physician, Rhodes Scholar</p>
+            <p class="font-weight-light mb-0">Certified Physician, Rhodes Scholar (Syria & St Cross '18)</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.png" alt="">
             <h5>Sarah Ing, CTO</h5>
             <p class="font-weight-light mb-0">Software Engineer, Product Dev</p>
           </div>
