--- a/keea/index.html
+++ b/keea/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>KEEA</title>
+  <title>Keea</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <!-- Masthead -->
   <header class="masthead text-center">
     <div class="container">
-      <img class="logo" src="img/logo2.png" alt="">
+      <img class="logo" src="img/logo5.png" alt="KEEA logo">
       <div class="col-xl-12 mx-auto link">
         <p class="mb-4">Let us help you by filling out our <a href="#">early adopters survey.</a></p>
       </div>
