update landing page wording

--- a/keea/index.html
+++ b/keea/index.html
@@ -30,7 +30,8 @@
     <div class="container">
       <img class="logo" src="img/logo5.png" alt="KEEA logo">
       <div class="col-xl-12 mx-auto link">
-        <p class="mb-4">Let us help you by filling out our <a href="#">early adopters survey.</a></p>
+        <p class="mb-4">Let us help you by sharing your thoughts.</p>
+        <a class="typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
     </div>
   </header>
@@ -70,50 +71,28 @@
       <h2 class="mb-5 title">ABOUT</h2>
       <div class="row">
         <div class="about col-lg-12">
-          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Japanese American software engineer who has worked in the insurance health industry across two continents.</p>
+          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Singpoarean/Japanese-Singaporean American software engineer who has worked in the insurance health industry across two continents. She also has led the technical team for a global community platform.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Alexey1.jpg" alt="">
-            <h5>Alex Youssef, CEO</h5>
+            <h5>Alex Youssef MD, Co-founder</h5>
             <p class="font-weight-light mb-0">Certified Physician, Rhodes Scholar (Syria & St Cross '18)</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.png" alt="">
-            <h5>Sarah Ing, CTO</h5>
-            <p class="font-weight-light mb-0">Software Engineer, Product Dev</p>
+            <h5>Sarah Ing, Co-founder </h5>
+            <p class="font-weight-light mb-0">Software Engineer, Product Development</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Call to Action -->
-
-
-  <!-- Footer -->
-  <!-- <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </div>
-  </footer> -->
-
-  <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
