Change font for media queries

--- a/keea/index.html
+++ b/keea/index.html
@@ -30,13 +30,13 @@
     <div class="container">
       <div class="col-xl-12 mx-auto link">
         <img class="logo" src="img/logo5.png" alt="KEEA logo">
-        <p class="mb-4">Let us help you by sharing your thoughts.</p>
+        <p class="mb-4 help">Let us help you by sharing your thoughts.</p>
         <a class="typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
     </div>
   </header>
 
-  <section class="features-icons">
+  <section class="features-icons text-center">
     <div class="container">
       <div class="row">
         <div class="col-xl-12 mx-auto">
@@ -78,14 +78,14 @@
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Alexey1.jpg" alt="">
-            <h5>Alex Youssef MD, Co-founder</h5>
+            <h6>Alex Youssef MD, Co-founder</h6>
             <p class="font-weight-light mb-0">Certified Physician, Rhodes Scholar (Syria & St Cross '18)</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.png" alt="">
-            <h5>Sarah Ing, Co-founder </h5>
+            <h6>Sarah Ing, Co-founder </h6>
             <p class="font-weight-light mb-0">Software Engineer, Product Development</p>
           </div>
         </div>
