Center about text

--- a/keea/index.html
+++ b/keea/index.html
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  <section class="testimonials">
+  <section class="testimonials text-center">
     <div class="container">
       <h3 class="mb-5 title">ABOUT</h3>
       <div class="row">
