Change size of logo and font size

--- a/keea/index.html
+++ b/keea/index.html
@@ -30,19 +30,17 @@
     <div class="container">
       <div class="col-xl-12 mx-auto link">
         <img class="logo" src="img/logo5.png" alt="KEEA logo">
-        <p class="mb-4 help">Let us help you by sharing your thoughts.</p>
-        <a class="typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+        <p class="company-description mb-5">Keea is a London-based startup creating an innovative healthcare delivery model. We imagine a world in which medical travel is integrated within the healthcare systems and is available as a trusted and safe option for patients. We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
+        <p class="help">Let us help you by sharing your thoughts.</p>
+        <a class="text-left typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
+    </div>
     </div>
   </header>
 
   <section class="features-icons text-center">
     <div class="container">
-      <div class="row">
-        <div class="col-xl-12 mx-auto">
-          <p class="company-description mb-5">Keea is a London-based startup creating an innovative healthcare delivery model. We imagine a world in which medical travel is integrated within the healthcare systems and is available as a trusted and safe option for patients. We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
-        </div>
-      </div>
       <div class="listed-features row">
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
@@ -70,7 +68,7 @@
     <div class="container">
       <h3 class="mb-5 title">ABOUT</h3>
       <div class="row">
-        <div class="about col-lg-12">
+        <div class="text-left about col-lg-12">
           <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Singpoarean/Japanese American software engineer who has worked in the insurance health industry across two continents. She also has led the technical team for a global community platform.</p>
         </div>
       </div>
