--- a/keea/index.html
+++ b/keea/index.html
@@ -69,7 +69,7 @@
       <h3 class="mb-5 title">ABOUT</h3>
       <div class="row">
         <div class="text-left about col-lg-12">
-          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Singpoarean/Japanese American software engineer who has worked in the health insurance industry across two continents. She has also led the technical team for a global community platform.</p>
+          <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone. Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries. Sarah is a Singaporean/Japanese American software engineer who has worked in the health insurance industry across two continents. She has also led the technical team for a global community platform.</p>
         </div>
       </div>
       <div class="row">
