--- a/keea/community.html
+++ b/keea/community.html
@@ -34,18 +34,14 @@
             <p><strong>
               Keea is a place for you to book medical treatment anywhere in the world.
             </strong></p>
-            <p>
-              We promise you safe care from trusted, accredited medical professionals and will take care of all the logistics, so you can focus solely on feeling better.
+            <p class="company-description mb-5">
+              We promise you safe care from trusted medical professionals and will take care of all the logistics, so you can focus solely on feeling better.
             </p>
           </div>
         </div>
-        <p class="help">Let us help you by sharing your thoughts.</p>
-        <a class="text-left typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="text-center typeform-share button" href="https://medicaltravel.typeform.com/to/B01DCx" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:16px;line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:30px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up For Beta </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
-    </div>
-    </div>
-  </header>
-
+    </header>
   <section class="features-icons text-center">
     <div class="container">
       <div class="listed-features row">
@@ -71,7 +67,6 @@
       </div>
     </div>
   </section>
-
   <section class="testimonials text-center">
     <div class="container">
       <h3 class="mb-5 title">ABOUT</h3>
@@ -83,7 +78,7 @@
             Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries.
           </p>
           <p>
-            Sarah is a Singaporean/Japanese American software engineer who has worked in the health insurance industry across two continents and built community for a global education platform.
+            Sarah is a Japanese-American software engineer who has worked in the health insurance industry across two continents and built community for a global education platform.
           </p>
         </div>
       </div>
