--- a/keea/community.html
+++ b/keea/community.html
@@ -37,9 +37,12 @@
             <p class="company-description mb-5">
               We promise you safe care from trusted medical professionals and will take care of all the logistics, so you can focus solely on feeling better.
             </p>
+            <p class="company-description mb-5">
+              Become a part of our early adopter program to gain exclusive access and share your insights with our community.
+            </p>
           </div>
         </div>
-        <a class="text-center typeform-share button" href="https://medicaltravel.typeform.com/to/B01DCx" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:16px;line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:30px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up For Beta </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="text-center typeform-share button" href="https://medicaltravel.typeform.com/to/B01DCx" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:16px;line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:30px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
     </header>
   <section class="features-icons text-center">
