Add supported logos

--- a/keea/index.html
+++ b/keea/index.html
@@ -44,7 +44,7 @@
       <div class="listed-features row">
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <h3>COMMUNITY</h3>
+            <h3 class="headlines">COMMUNITY</h3>
             <p class="lead mb-0">Patients belong to a community of other global citizens who share their experience and knowledge of medical travel.</p>
           </div>
         </div>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <h3>TRUST</h3>
+            <h3 class="headlines">TRUST</h3>
             <p class="lead mb-0">Quality of your patient's healthcare treatment and transparency in our service is the most important thing to you and us.</p>
           </div>
         </div>
@@ -83,8 +83,23 @@
         <div class="col-lg-6">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.png" alt="">
-            <h6>Sarah Ing, Co-founder </h6>
+            <h6>Sarah Ing, Co-founder</h6>
             <p class="font-weight-light mb-0">Software Engineer, Product Development</p>
+          </div>
+        </div>
+      </div>
+      <h3 class="mb-5 support title">SUPPORTED BY</h3>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid mb-3 rhodes" src="img/rhodes.png" alt="Rhodes">
+            <h6>Rhodes Incubator</h6>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0" >
+            <img class="img-fluid mb-3 ef" src="img/ef.png" alt="Entrepreneur First">
+            <h6>Entrepreneur First</h6>
           </div>
         </div>
       </div>
