Change alignment and zoom

--- a/keea/community.html
+++ b/keea/community.html
@@ -31,19 +31,18 @@
       <div class="col-xl-12 mx-auto link">
         <img class="logo" src="img/logo5.png" alt="KEEA logo">
           <div class="company-description mb-5">
-            <p><strong>
+            <p>
               Keea is a place for you to book medical treatment anywhere in the world.
-            </strong></p>
+            </p>
             <p class="company-description mb-5">
               We promise you safe care from trusted medical professionals and will take care of all the logistics, so you can focus solely on feeling better.
             </p>
-            <p class="company-description mb-5">
-              Become a part of our early adopter program to gain exclusive access and share your insights with our community.
-            </p>
+            <h3 class="company-description mb-5"><strong>
+              Join our beta community and help us create the right thing, just for you.
+            </strong></h3>
           </div>
         </div>
-        <a class="text-center typeform-share button" href="https://medicaltravel.typeform.com/to/B01DCx" data-mode="drawer_left" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:16px;line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:30px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-      </div>
+        <a class="typeform-share button" href="https://medicaltravel.typeform.com/to/B01DCx" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#4D98ED;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:18px;line-height:45px;text-align:center;margin:0;height:55px;padding:0px 30px;border-radius:22px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Sign Up </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </header>
   <section class="features-icons text-center">
     <div class="container">
