--- a/keea/index.html
+++ b/keea/index.html
@@ -31,7 +31,8 @@
       <div class="col-xl-12 mx-auto link">
         <img class="logo" src="img/logo5.png" alt="KEEA logo">
 
-        <p class="company-description mb-5">Keea is a London-based startup creating an innovative healthcare delivery model. We imagine a world in which medical travel is integrated within the healthcare systems and is available as a trusted and safe option for patients. We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
+        <p class="company-description mb-5">Keea is a London-based startup creating an innovative healthcare delivery model, offering medical travel as a safe and trusted option for patients.</p>
+        <p class="company-description mb-5">We are looking to speak to doctors to understand how medical travel can be factored into the workflow and care of their patients.</p>
         <p class="help">Let us help you by sharing your thoughts.</p>
         <a class="text-left typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Begin</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
