--- a/keea/index.html
+++ b/keea/index.html
@@ -73,7 +73,7 @@
         <div class="text-left about col-lg-12">
           <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone.</p>
 
-          <p>Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has practiced medicine in 6 countries.</p>
+          <p>Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has done clinical training in 6 countries.</p>
           <p>Sarah is a Singaporean-Japanese-American software engineer who has worked in the health insurance industry across two continents. She has also led the technical team for a global community platform.</p>
         </div>
       </div>
