--- a/keea/index.html
+++ b/keea/index.html
@@ -31,8 +31,7 @@
       <div class="col-xl-12 mx-auto link">
         <img class="logo" src="img/logo5.png" alt="KEEA logo">
 
-        <p class="company-description mb-5">Keea is a global healthcare platform.
-        Using our service, patients suffering from long wait times or expensive care can book safe and reliable medical treatments abroad.</p>
+        <p class="company-description mb-5">Keea is a global healthcare platform where patients can book safe and reliable medical treatments abroad. We believe that healthcare is a human right and we want to create a world in which every patient has access to high-quality affordable care.</p>
         <p class="company-description mb-5">We are looking for more doctors to work together on intergrating medical travel into the patient care pathway.</p>
         <p class="help">We are running an early adopter program to gather feedback and design our service. Join the other 200+ doctors who have already signed up for our pilot.</p>
         <a class="text-left typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
